friend-service result api part1